--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "vercel dev"
+    "dev": "vercel dev",
+    "vercel-build": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
