--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "vercel dev",
-    "vercel-build": "npx prisma db push"
+    "dev": "node server.js",
+    "build": "next build",
+    "vercel-build": "npx prisma generate && npx prisma db push"
   },
   "keywords": [],
   "author": "",
