--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2"
   },
