--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2"
   },
